--- a/src/component/examTicket/ExamTicket.module.scss
+++ b/src/component/examTicket/ExamTicket.module.scss
@@ -34,6 +34,23 @@
   padding: 5px;
   border-radius: 10px;
 }
+.btnXuat {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  // background-color: rgba(255, 153, 60, 1);
+  border: 2px solid rgba(255, 153, 60, 1);
+  padding: 5px;
+  border-radius: 10px;
+}
+.btnXuat_txt {
+  font-size: 18px;
+  margin-bottom: 0px;
+  margin-left: 5px;
+  color: rgba(255, 153, 60, 1);
+  cursor: pointer;
+}
 .btnChot_txt {
   font-size: 18px;
   margin-bottom: 0px;
@@ -64,4 +81,14 @@
 }
 .wrap_Table_txt {
   color: rgba(165, 168, 177, 1);
+}
+.wrap_Table_txtD {
+  color: red;
+}
+.rowHover {
+  cursor: pointer;
+}
+.selected {
+  background-color: blue;
+  color: white;
 }
