--- a/src/component/examTicket/ExamTicket.module.scss
+++ b/src/component/examTicket/ExamTicket.module.scss
@@ -89,6 +89,6 @@
   cursor: pointer;
 }
 .selected {
-  background-color: blue;
-  color: white;
+  background-color: rgb(167, 228, 250);
+  color: black;
 }
