--- a/src/component/packticket/PackTicket.module.scss
+++ b/src/component/packticket/PackTicket.module.scss
@@ -19,6 +19,10 @@
   flex-direction: row;
   justify-content: center;
 }
+.btn > a {
+  text-decoration: none;
+}
+
 .btnAdd {
   display: flex;
   flex-direction: row;
