--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -6,3 +6,12 @@
   width: 100%;
   height: 95%;
 }
+.HomeRight {
+  background-color: white;
+  border-radius: 5px;
+  padding: 15px;
+}
+.wrap_money {
+  font-size: 25px;
+  font-weight: bold;
+}
