--- a/src/component/listTicket/ListTicket.module.scss
+++ b/src/component/listTicket/ListTicket.module.scss
@@ -42,6 +42,7 @@
   padding: 5px;
   border-radius: 10px;
   margin-left: 10px;
+  text-decoration: none;
 }
 .btnLoc_txt {
   font-size: 18px;
@@ -108,4 +109,7 @@
   margin-bottom: 0px;
   margin-left: 5px;
   color: rgba(253, 89, 89, 1);
+}
+.btnFile > a {
+  text-decoration: none;
 }
